Normalize team drive names when saving them.

Team drives can have no ascii and path like characters in the name. Normalize
the names to remove these.

This will lead to a delta between what you see in the web app and what you see
in the file manager for team drives with these names.

Bug: 873920
Change-Id: I24fd8664cc64a62b9a1d5e72d0138c0792c449d9
Reviewed-on: https://chromium-review.googlesource.com/1174134
Reviewed-by: Luciano Pacheco <lucmult@chromium.org>
Commit-Queue: Stuart Langley <slangley@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583185}
Former-commit-id: a412fb197170aeffe2c267efe4a4b970f0569c0c